--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Setup Node.js environment
         uses: actions/setup-node@v4.0.4
       - run: npm install
+      - run: mv src/index.html .
       - run: npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v5
