--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -27,14 +27,13 @@ jobs:
       - name: Setup Node.js environment
         uses: actions/setup-node@v4.0.4
       - run: npm install
-      - run: mv src/index.html .
       - run: npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: '.'
+          path: 'src'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
