--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
   },
   "scripts": {
     "start": "npx serve",
-    "build": "tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
+    "build": "tailwindcss -i ./src/input.css -o ./src/output.css --watch"
   }
 }
