--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -30,6 +30,7 @@ jobs:
       - run: npx tailwindcss -i ./src/input.css -o ./src/output.css
       - run: mv src/index.html .
       - run: mv src/output.css .
+      - run: mv src/assets .
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
