--- a/package.json
+++ b/package.json
@@ -5,5 +5,6 @@
   "scripts": {
     "start": "npx serve",
     "build": "npx tailwindcss -i ./src/css/input.css -o ./src/css/output.css"
+    "watch": "npx tailwindcss -i ./src/css/input.css -o ./src/css/output.css --watch"
   }
 }
