--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   },
   "scripts": {
     "start": "npx serve",
-    "build": "npx tailwindcss -i ./src/css/input.css -o ./src/css/output.css"
+    "build": "npx tailwindcss -i ./src/css/input.css -o ./src/css/output.css",
     "watch": "npx tailwindcss -i ./src/css/input.css -o ./src/css/output.css --watch"
   }
 }
